# abstract3d

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
artifacts/validation/bake-performance-program/: generation_stats.json  report.json
artifacts/validation/final-proof/hunyuan-owl/: geometry.glb  metadata.json
artifacts/validation/final-proof/hunyuan-starship/: geometry.glb  metadata.json
artifacts/validation/final-proof/summary/: summary.json
artifacts/validation/generated-reference-completion/: README.md  face_texture_qa.json  owl_texture_qa.json  starship_texture_qa.json
artifacts/validation/generated-reference-completion/face/: metadata.json
artifacts/validation/generated-reference-completion/owl/: metadata.json  scene.glb
artifacts/validation/generated-reference-completion/starship/: metadata.json  scene.glb
artifacts/validation/generated-references-v3/: acceptance_calibration.json
artifacts/validation/generated-references/face-4view/: metadata.json
artifacts/validation/generated-references/owl-2view/: metadata.json
artifacts/validation/generated-references/starship-2view/: metadata.json
artifacts/validation/golden-bake/: summary.json
artifacts/validation/golden-bake/face/: metadata.json
artifacts/validation/golden-bake/owl/: metadata.json
artifacts/validation/golden-bake/ship/: metadata.json
artifacts/validation/iter3-multiview-fixed/face-2mv/: geometry.glb  metadata.json
artifacts/validation/parity/sportscar_v7/: geometry.glb  pinned_facts.json
artifacts/validation/quality-review/: inspection_data.json  scores.json
artifacts/validation/texture-cycle-proofs/: CERTIFICATION.md  RESULTS.md  math_audit.md  tex1_material_truth.md  tex2_fill_quality.md  tex3_face_closeup.md  texture_cycle_verdict.md  verdict1_final_ruling.md  verdict1_initial_demolition.md  verdict1_v9_reaudit.md  verdict2_final_ruling.md  verdict2_initial_demolition.md
artifacts/validation/texture-cycle-proofs/cycle2-3/: c2a_film_band.md  c2b_eye_rescue.md  c2c_fill_character.md  c2d_identity_decomposition.md  c3_ship_nose_fix.md  critic1_cycle2_ruling.md  critic1_cycle3_ruling.md  critic2_cycle2_review.md  defect_ledger.md
artifacts/validation/texture-cycle-proofs/cycle4/: c4_feature_repair.md  c4_seam_minors.md  c4_stroke_removal.md  critic1_cycle4_ruling.md
artifacts/validation/texture-cycle-proofs/cycle5-6/: c5_identity_gate_close.md  c6_boundary_lineart_fix.md  critic1_cycle5_ruling.md  critic2_cycle5_review.md
docs/: KnowledgeBase.md  README.md  api.md  architecture.md  benchmarks.md  faq.md  getting-started.md  index.md  integration-abstractcore.md  methodology.md  models.md  troubleshooting.md
docs/adr/: 0001_scene3d_local_first_glb_contract.md  0002_validated_backend_uses_pinned_triposr_and_composed_t23d.md  0003_trellis2_uses_official_upstream_assets_only.md  0004_step1x_geometry_only_official_backend_with_local_compatibility_patches.md  0005_hunyuan3d21_license_gated_official_shape_backend.md  0006_multiview_geometry_via_hunyuan3d_2mv_and_reference_view_qa.md  0007_canonical_orthographic_projection_and_first_surface_visibility.md  0008_photometric_pose_overlap_registration_and_witness_gating.md  0009_export_material_truth_and_fill_detail_synthesis.md  README.md
docs/assets/validation/comparison-step1x-vs-triposr/: summary.json  summary.md
docs/assets/validation/local-step1x/: stats.json  summary.json  summary.md
docs/assets/validation/local-step1x-dynamic/: stats.json  summary.json  summary.md
docs/assets/validation/local-step1x-label/: stats.json  summary.json  summary.md
docs/assets/validation/local-step1x-label-refresh/: stats.json  summary.json  summary.md
docs/assets/validation/local-triposr/: stats.json  summary.json  summary.md
docs/assets/validation/rocket-i23d-comparison/: summary.json  summary.md
docs/assets/validation/step1x-espresso-checkpoint-comparison/: summary.md
docs/assets/validation/step1x-recovery/: summary.json  summary.md
docs/backlog/: overview.md
docs/backlog/recurrent/: README.md  backlog-and-adr-hygiene.md  post-completion-follow-up-triage.md
scripts/: check_export_materials.py  final_proof_sheet.py  generation_stats.py  golden_bake.py  parity_canary.py  perf_proof_pack.py  step1x_extract_vae.py  texture_qa.py  texture_qa_render.py  triposr_resolution_study.py  triposr_texture_proof.py  validate_local.py
src/abstract3d/: __init__.py  artifact_gates.py  artifacts.py  bake_acceptance.py  bundle.py  captioning.py  cli.py  errors.py  feature_fringe_repair.py  film_band.py  film_band_gradient.py  gradient_compositing.py  image_composition.py  material_gates.py  model_catalog.py  profiling.py  reference_flow.py  reference_generation.py  rendering.py  scene3d_manager.py  segmentation.py  texturing.py  types.py
src/abstract3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/abstract3d/backends/: __init__.py  hunyuan3d_runtime.py  step1x_runtime.py  trellis2_runtime.py  triposr_runtime.py
src/abstract3d/integrations/: abstractcore_plugin.py
tests/: test_artifact_gates.py  test_bake_acceptance.py  test_bundle_and_profiling.py  test_cli.py  test_export_materials.py  test_film_band.py  test_film_band_boundaries.py  test_film_band_gradient.py  test_gradient_compositing.py  test_hunyuan3d_backend_unit.py  test_image_composition.py  test_lazy_imports.py  test_material_gates.py  test_mirror_source_gate_robustness.py  test_model_catalog.py  test_option_contract.py  test_packaging_metadata.py  test_parity_canary.py  test_plugin_registration.py  test_reference_flow.py  test_reference_generation.py  test_rendering.py  test_scarce_admission_boundaries.py  test_scene3d_manager.py  test_shadow_apron_boundaries.py  test_step1x_backend_unit.py  test_texture_qa.py  test_texturing.py  test_trellis2_backend_unit.py  test_triposr_backend_unit.py  test_validate_local_script.py  test_viewer_frame_export.py
(+37 files in other folders)
